# openrelik-worker-dissect

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: publish.yml  release.yml
src/: app.py  rdump-jsonl.py  rdump-splunk.py  target-query.py  tasks.py
