[tool.poetry]
name = "openrelik-worker-dissect"
version = "2025.01.27"
description = "Processes forensic artifacts to generate timelines using Dissect"
authors = ["Mathieu LE CLEACH <0xFustang@proton.me"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
celery = {extras = ["redis"], version = "^5.4.0"}
openrelik-worker-common = "^2024.11.27"
"dissect" = "==3.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
